src/snapshots/schermz__tests__schema_from_object.snap
---
source: src/lib.rs
assertion_line: 100
expression: "Schema::from_json(&json, true).to_json()"
---
{
  "address": {
    "types": [
      {
        "city": {
          "types": [
            "STRING(6)"
          ]
        },
        "street": {
          "types": [
            "STRING(17)"
          ]
        }
      }
    ]
  },
  "age": {
    "types": [
      "NUMBER"
    ]
  },
  "name": {
    "types": [
      "STRING(8)"
    ]
  },
  "phones": {
    "types": [
      {
        "ARRAY": [
          {
            "mobile": {
              "types": [
                "STRING(11)"
              ]
            }
          },
          "NUMBER",
          "STRING(11)"
        ]
      }
    ]
  },
  "title": {
    "types": [
      "STRING(0)"
    ]
  }
}
